--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ python-dateutil==2.8.2
 python-decouple==3.8
 python-dotenv==1.0.1
 python-jose==3.3.0
+pytz==2024.1
 PyYAML==6.0.1
 rich==13.7.0
 rich-click==1.7.3
@@ -50,6 +51,7 @@ rsa==4.9
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.27
+starlette==0.37.1
 typing_extensions==4.9.0
 uvicorn==0.27.1
 uvloop==0.19.0
