--- a/requirements.txt
+++ b/requirements.txt
@@ -31,11 +31,13 @@ MarkupSafe==2.1.5
 mdurl==0.1.2
 msgspec==0.18.6
 multidict==6.0.5
+phonenumbers==8.13.34
 polyfactory==2.14.1
 psycopg2-binary==2.9.9
 pyasn1==0.5.1
 pycparser==2.21
 pydantic==2.6.1
+pydantic-extra-types==2.6.0
 pydantic-settings==2.2.1
 pydantic_core==2.16.2
 Pygments==2.17.2
